--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "sweetalert2": "^10.9.0",
     "sweetalert2-react-content": "^3.2.1",
     "web-vitals": "^0.2.4"
