--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "prettier --write */**/*.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
